# erc_dex/erc_dex/models/i_token_request_request.py
@@ -1,0 +1,165 @@
+# coding: utf-8
+
+"""
+    ERC dEX REST API
+
+    No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)  # noqa: E501
+
+    OpenAPI spec version: 0.0.1-alpha
+    
+    Generated by: https://github.com/swagger-api/swagger-codegen.git
+"""
+
+
+import pprint
+import re  # noqa: F401
+
+import six
+
+
+class ITokenRequestRequest(object):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    """
+    Attributes:
+      swagger_types (dict): The key is attribute name
+                            and the value is attribute type.
+      attribute_map (dict): The key is attribute name
+                            and the value is json key in definition.
+    """
+    swagger_types = {
+        'symbol': 'str',
+        'email': 'str',
+        'message': 'str'
+    }
+
+    attribute_map = {
+        'symbol': 'symbol',
+        'email': 'email',
+        'message': 'message'
+    }
+
+    def __init__(self, symbol=None, email=None, message=None):  # noqa: E501
+        """ITokenRequestRequest - a model defined in Swagger"""  # noqa: E501
+
+        self._symbol = None
+        self._email = None
+        self._message = None
+        self.discriminator = None
+
+        self.symbol = symbol
+        if email is not None:
+            self.email = email
+        if message is not None:
+            self.message = message
+
+    @property
+    def symbol(self):
+        """Gets the symbol of this ITokenRequestRequest.  # noqa: E501
+
+
+        :return: The symbol of this ITokenRequestRequest.  # noqa: E501
+        :rtype: str
+        """
+        return self._symbol
+
+    @symbol.setter
+    def symbol(self, symbol):
+        """Sets the symbol of this ITokenRequestRequest.
+
+
+        :param symbol: The symbol of this ITokenRequestRequest.  # noqa: E501
+        :type: str
+        """
+        if symbol is None:
+            raise ValueError("Invalid value for `symbol`, must not be `None`")  # noqa: E501
+
+        self._symbol = symbol
+
+    @property
+    def email(self):
+        """Gets the email of this ITokenRequestRequest.  # noqa: E501
+
+
+        :return: The email of this ITokenRequestRequest.  # noqa: E501
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email):
+        """Sets the email of this ITokenRequestRequest.
+
+
+        :param email: The email of this ITokenRequestRequest.  # noqa: E501
+        :type: str
+        """
+
+        self._email = email
+
+    @property
+    def message(self):
+        """Gets the message of this ITokenRequestRequest.  # noqa: E501
+
+
+        :return: The message of this ITokenRequestRequest.  # noqa: E501
+        :rtype: str
+        """
+        return self._message
+
+    @message.setter
+    def message(self, message):
+        """Sets the message of this ITokenRequestRequest.
+
+
+        :param message: The message of this ITokenRequestRequest.  # noqa: E501
+        :type: str
+        """
+
+        self._message = message
+
+    def to_dict(self):
+        """Returns the model properties as a dict"""
+        result = {}
+
+        for attr, _ in six.iteritems(self.swagger_types):
+            value = getattr(self, attr)
+            if isinstance(value, list):
+                result[attr] = list(map(
+                    lambda x: x.to_dict() if hasattr(x, "to_dict") else x,
+                    value
+                ))
+            elif hasattr(value, "to_dict"):
+                result[attr] = value.to_dict()
+            elif isinstance(value, dict):
+                result[attr] = dict(map(
+                    lambda item: (item[0], item[1].to_dict())
+                    if hasattr(item[1], "to_dict") else item,
+                    value.items()
+                ))
+            else:
+                result[attr] = value
+
+        return result
+
+    def to_str(self):
+        """Returns the string representation of the model"""
+        return pprint.pformat(self.to_dict())
+
+    def __repr__(self):
+        """For `print` and `pprint`"""
+        return self.to_str()
+
+    def __eq__(self, other):
+        """Returns true if both objects are equal"""
+        if not isinstance(other, ITokenRequestRequest):
+            return False
+
+        return self.__dict__ == other.__dict__
+
+    def __ne__(self, other):
+        """Returns true if both objects are not equal"""
+        return not self == other
